--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Landing.razor
@@ -5,7 +5,11 @@
         <MudPaper MinHeight="60px" Class="pa-2 d-flex flex-row align-center justify-space-between">
             <div class="btn-md"></div>
             <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
-            <ScreenshotIconButton TargetId="raceweek-landing" Colour="Color.Tertiary" Class="btn-sm" />
+            <ScreenshotButton TargetId="raceweek-landing"
+                              Colour="Color.Tertiary"
+                              IconSize="Size.Small"
+                              PostFixIcon="true"
+                              Class="btn-md" />
         </MudPaper>
     </MudItem>
     <MudItem xs="3">
