--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/PostRace.razor
@@ -12,10 +12,14 @@
                         <MudButtonGroup Color="Color.Tertiary" Variant="Variant.Outlined">
                             <MudButton StartIcon="@Icons.Material.Filled.AutoGraph"
                                        IconSize="Size.Small"
-                                       OnClick="GoToOverview">
+                                       OnClick="GoToOverview"
+                                       Class="btn-md">
                                 Standings
                             </MudButton>
-                            <ScreenshotButton TargetId="postrace-container" />
+                            <ScreenshotButton TargetId="postrace-container"
+                                              IconSize="Size.Small"
+                                              PostFixIcon="true"
+                                              Class="btn-md" />
                         </MudButtonGroup>
                     </div>
                 </MudStack>
