--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -34,10 +34,14 @@
 
             <div class="d-flex flex-row-reverse" style="width:30%">
                 <MudButtonGroup Variant="Variant.Outlined" Color="Color.Tertiary">
-                    <ScreenshotButton TargetId="race-display" Class="btn-md" />
+                    <ScreenshotButton TargetId="race-display"
+                                      IconSize="Size.Small"
+                                      PostFixIcon="true"
+                                      Class="btn-md" />
                     @if (Model.Race.State != State.Closed)
                     {
-                        <MudButton StartIcon="@IconCollection.ChevronsRight"
+                        <MudButton EndIcon="@IconCollection.ChevronsRight"
+                                   IconSize="Size.Small"
                                    OnClick="Advance"
                                    Class="btn-md">Advance</MudButton>
                     }
