Refactoring the development summaries

--- a/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopEntrant.razor
+++ b/SimTECH/SimTECH/Pages/Seasons/Overview/Development/Components/DevelopEntrant.razor
@@ -1,10 +1,13 @@
-﻿<MudTable Items="@DevelopedEntrants" Dense="true" Class="extra-dense" id="development-results">
+﻿<MudTable Items="@DevelopedEntrants"
+          Dense="true"
+          Class="extra-dense"
+          id="development-results">
     <ToolBarContent>
         @ChildContent
     </ToolBarContent>
     <HeaderContent>
         <MudTh>
-            <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.Name)">
+            <MudTableSortLabel T="DevelopedEntrant" SortBy="@(e => e.Name)" InitialDirection="SortDirection.Ascending">
                 Name
             </MudTableSortLabel>
         </MudTh>
