--- a/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
+++ b/SimTECH/SimTECH/Pages/RaceWeek/Tabs/Race.razor
@@ -691,6 +691,7 @@
         return pitCost;
     }
 
+    // Actions to undertake after having triggered an "Advance"
     private void PostProcessAdvance()
     {
         highestScore = RaceDrivers.Max(e => e.LapSum);
@@ -705,6 +706,7 @@
         ValidTyres = AvailableTyres.FindValidTyres(distanceLeft, Model.Climate.IsWet).ToList();
     }
 
+    // Recalculates the positions of the participating race drivers, includes atacking and defending
     private void DeterminePositions()
     {
         var allPositionsAligned = false;
@@ -762,7 +764,7 @@
             //}
             //else
 
-            if (!defendingDriver.InstantOvertaken && driver.ClassId == defendingDriver.ClassId)
+            if (defendingDriver.InstantOvertaken == false && driver.ClassId == defendingDriver.ClassId)
             {
                 // Subtract attack value from defense, what's left is how much the attacker is hindered
                 var attackingResult = driver.Attack + NumberHelper.RandomInt((battleRng * -1), battleRng);
@@ -777,7 +779,7 @@
                 if (battleCost > 0)
                     lastScore.Score -= battleCost;
 
-                // Overtake failed
+                // Attacking driver has failed to overtake, the defender still has a higher lap sum
                 if (defendingDriver.LapSum > driver.LapSum)
                 {
                     defendingDriver.DefensiveCount++;
